# O365-notifications

./: .gitchangelog.rc  .pre-commit-config.yaml  CHANGELOG.rst  LICENSE  README.md  README.rst  pyproject.toml  requirements.txt  setup.py  subscription.py
.github/: release-drafter.yaml
.github/actions/poetry-setup/: action.yaml
.github/workflows/: ci.yaml  publish.yaml  release-drafter.yaml  release.yaml  triage.yaml  version.yaml
src/: subscription.py
src/O365_notifications/: base.py  constants.py  push.py  streaming.py  utils.py
src/O365_notifications/push/: base.py
src/O365_notifications/streaming/: base.py  mailbox.py  streaming.py
src/notifications/: streaming.py
src/o365_notifications/: base.py
src/o365_notifications/push/: base.py
src/o365_notifications/streaming/: base.py  mailbox.py
tests/: conftest.py
tests/streaming/: test_streaming.py
