[tool.poetry]
name = "O365-notifications"
version = "0.1.1"
description = "Pythonic handler for O365 Streaming & Push Notifications"
authors = ["Renato Damas <rena2damas@gmail.com>"]
license = "MIT"
readme = "README.rst"
packages = [
    { include = "*", from = "src" }
]
homepage = ""
repository = "https://github.com/codectl/O365-notifications"
documentation = ""
keywords = [
    "O365",
    "notifications",
    "push",
    "streaming",
    "flask",
    "python",
    "python3"
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]

[tool.poetry.dependencies]
O365 = "^2.0.20"
python = "^3.9"
requests = "^2.28.2"
marshmallow = "^3.19.0"

[tool.poetry.dev-dependencies]
coverage = "^7.0.5"
pre-commit = "^3.0.3"
pytest = "^7.2.1"
requests-mock = "^1.10.0"
pytest-cases = "^3.6.13"

[tool.poetry.extras]
O365 = ["O365"]

[tool.poetry.urls]
issues = "https://github.com/codectl/O365-notifications/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
